--- a/frontend/src/components/slider.css
+++ b/frontend/src/components/slider.css
@@ -8,14 +8,8 @@
     border-radius: 20px;
     background: #D9D9D9;
     outline: none;
-    opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    
-}
-
-.slider:hover {
-    opacity: 1;
 }
 
 .slider::-webkit-slider-thumb {
@@ -26,8 +20,8 @@
     border-radius: 1px;
     background: #FFFFFF;
     cursor: pointer;
-    box-shadow: -200px 0 0 200px #F18354;
-    
+    box-shadow: -200px 0 0 200px #df4825;
+
 
 }
 .slider::-moz-range-thumb {
@@ -40,15 +34,15 @@
 .slider::-webkit-slider-runnable-track {
     height: 20px;
     -webkit-appearance: none;
-    color: #F18354;
+    color: #df4825;
 }
 .slider::-moz-range-progress {
-    background-color: #F18354;
+    background-color: #df4825;
 }
 
 .slider::-ms-fill-lower {
     background-color: #D9D9D9;
 }
-.slider::-ms-fill-upper {  
-    background-color: #F18354;
+.slider::-ms-fill-upper {
+    background-color: #df4825;
 }
