--- a/frontend/src/components/slider.css
+++ b/frontend/src/components/slider.css
@@ -1,4 +1,3 @@
-
 .slider {
     overflow: hidden;
     -webkit-appearance: none;
@@ -6,43 +5,43 @@
     width: 200px;
     height: 20px;
     border-radius: 20px;
-    background: #D9D9D9;
+    background: var(--secondary-color);
     outline: none;
     -webkit-transition: .2s;
     transition: opacity .2s;
 }
-
+.slider:disabled::-webkit-slider-thumb {
+    display: none;
+}
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 20px;
     height: 20px;
     border-radius: 1px;
-    background: #FFFFFF;
+    background: var(--bg-color);
     cursor: pointer;
-    box-shadow: -200px 0 0 200px #df4825;
-
-
+    box-shadow: -200px 0 0 200px var(--main-color);
 }
 .slider::-moz-range-thumb {
     width: 20px;
     height: 20px;
-    border-radius: 20px;
-    background: #D9D9D9;
+    border-radius: 1px;
+    background: var(--bg-color);
     cursor: pointer;
 }
 .slider::-webkit-slider-runnable-track {
     height: 20px;
     -webkit-appearance: none;
-    color: #df4825;
+    color: var(--main-color);
 }
 .slider::-moz-range-progress {
-    background-color: #df4825;
+    background-color: var(--main-color);
 }
 
 .slider::-ms-fill-lower {
-    background-color: #D9D9D9;
+    background-color: var(--bg-color);
 }
 .slider::-ms-fill-upper {
-    background-color: #df4825;
+    background-color: var(--main-color);
 }
