--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -31,6 +31,11 @@ main {
     justify-content: center;
     align-items: center;
 }
+.card {
+    background: var(--card-color);
+    border-radius: 1em;
+    margin: .8em;
+}
 
 @media (max-width: 30rem) {
     main {
