--- a/frontend/src/components/form.css
+++ b/frontend/src/components/form.css
@@ -5,3 +5,13 @@
     flex-direction: column;
     justify-content: start;
 }
+
+.box {
+    background-color: var(--card-color);
+    padding: .8em;
+    margin: .8em;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 75%;
+}
