--- a/frontend/src/components/slider.css
+++ b/frontend/src/components/slider.css
@@ -3,7 +3,7 @@
     -webkit-appearance: none;
     appearance: none;
     width: 100%;
-    height: 80%;
+    height: 1rem;
     border-radius: 20px;
     background: var(--secondary-color);
     outline: none;
@@ -16,9 +16,9 @@
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 15%;
-    height: 100%;
-    aspect-ratio: 1;
+    width: 1rem;
+    height: 1rem;
+    /* aspect-ratio: 1; */
     border-radius: 5%;
     background: var(--bg-color);
     cursor: pointer;
