Added circular progress bar with changes in styles

--- a/frontend/src/components/form.css
+++ b/frontend/src/components/form.css
@@ -19,4 +19,17 @@
 .progress-container {
     width: 60%;
     aspect-ratio: 1;
+    color: black;
+    font-weight: bold;
+    
+}
+.progress-container .CircularProgressbar-path {
+    stroke: var(--circleprogress-color);
+}
+.progress-container .CircularProgressbar-trail {
+    stroke: var(--circleprogbg-color);
+}
+
+.progress-percent {
+    font-size: 2.2em;
 }
