--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -22,6 +22,10 @@ main {
     color: var(--text-color);
     background: var(--bg-color);
 }
+h1 {
+    margin-top: 0;
+    margin-bottom: .4em;
+}
 
 .row {
     display: flex;
@@ -40,7 +44,14 @@ main {
 }
 
 @media (max-width: 30rem) {
-    main {
-        flex-direction: column;
+    .mb-col {
+        flex-direction: column-reverse;
+    }
+    .mb-row, div.mb-row {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    h1 {
+        margin-bottom: 0;
     }
 }
