--- a/frontend/src/components/map.css
+++ b/frontend/src/components/map.css
@@ -1,4 +1,12 @@
 .map {
     background: #ddd;
     flex: 3;
+    position: relative;
+}
+
+.dropdown {
+    position: absolute;
+    top: 2em;
+    width: 80%;
+    max-width: 35em;
 }
