--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -7,6 +7,7 @@
     --secondary-color: #cbced0;
     --circleprogress-color: #FF1E1E;
     --circleprogbg-color: #CBCED0;
+    --scrollbar-color: #aaaaaa;
 }
 html, body, #root, main {
     height: 100%;
@@ -21,10 +22,20 @@ main {
     font-size: 18px;
     color: var(--text-color);
     background: var(--bg-color);
+    overflow: hidden;
 }
 h1 {
     margin-top: 0;
     margin-bottom: .4em;
+}
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: var(--bg-color);
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-color);
 }
 
 .row {
