Add dynamic colors, improve busyness calculation

--- a/frontend/src/components/form.css
+++ b/frontend/src/components/form.css
@@ -48,6 +48,7 @@
 
 }
 .progress-container .CircularProgressbar-path {
+    /* default color, overridden in Form.js*/
     stroke: var(--circleprogress-color);
 }
 .progress-container .CircularProgressbar-trail {
