--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,7 +3,7 @@
     --text-color: #4b4b4b;
     --bg-color: #f7f7f7;
     --card-color: #eaebec;
-    --main-color: #f18354;
+    --main-color: #eba563;
     --secondary-color: #cbced0;
     --circleprogress-color: #FF1E1E;
     --circleprogbg-color: #CBCED0;
